[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Montserrat/Montserret-Size48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/OpgaveVælger.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Montserrat/Montserret-Size26.tres" type="DynamicFont" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 736.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "Opgaver"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 189.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 441.0
margin_right = 838.0
margin_bottom = 125.0

[node name="EtEllerToOrdButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 397.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Et eller to ord"

[node name="EndelserEneEndeButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 397.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "Endelserne -ene og -ende"

[node name="EnderDetPåRButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 397.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 3 )
text = "Udsagnsord - Ender det på R"
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/EtEllerToOrdButton" to="." method="_on_EtEllerToOrdButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/EndelserEneEndeButton" to="." method="_on_EndelserEneEndeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/EnderDetPåRButton" to="." method="_on_EnderDetPRButton_pressed"]
