extends Control



func _on_EtEllerToOrdButton_pressed():
	get_tree().change_scene("res://Scener/Opgave Scene.tscn")


func _on_EndelserEneEndeButton_pressed():
	get_tree().change_scene("res://Scener/EndelserEneEnde.tscn")


func _on_EnderDetPRButton_pressed():
	get_tree().change_scene("res://Scener/EnderDetPÃ¥R.tscn")
